# nanograd

./: LICENSE  README.md  example_binary_classification.ipynb  pyproject.toml  setup.py
.github/workflows/: pylint.yml  python-app.yml
nanograd/: nanograd.py  nn.py
tests/: test_nanograd.py
